Fixed align

--- a/src/app/archive/minecraftCountdown/countdown.css
+++ b/src/app/archive/minecraftCountdown/countdown.css
@@ -32,6 +32,7 @@ body {
     display: block;
     object-fit: cover;
     position: absolute;
+    top: 0;
     width: 100%;
     height: 100%;
     opacity: 0;
